Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113685

macOS: QMessageBox does not emit the accepted signal when parented

    XMLWordPrintable

Details

    • macOS
    • 6da1ecc8c (dev), 355656d9c (6.5), eb8605ed2 (6.6)

    Description

      Since the native dialogs are used in Qt 6.5, a parented message box will not emit the accepted signal. Unparented works fine, but it uses a completely different code-path.

      Attached is a sample project that shows the problem. Run as is will not emit the signal. When the this parameter on line 13 of widget.cpp is removed, the signal is emitted.

      To be clear: this is a regression from previous versions, see the comments below.

      Attachments

        For Gerrit Dashboard: QTBUG-113685
        # Subject Branch Project Status CR V

        Activity

          People

            vestbo Tor Arne Vestbø
            erikv Erik Verbruggen
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes